Fix: validFormatter didnt check for atleast 5 valid lines whoops